2002-06-05  Michael Thome  <mthome@bbn.com>

	* org/cougaar/core/logging/LoggingServiceProvider.java
	Moved much of this to
	util:org.cougaar.util.log.log4j.Log4jFactoryImpl

	* org/cougaar/core/logging/NullLoggingServiceImpl.java
	refactored

	* org/cougaar/core/node/NodeAgent.java
	Simplify startup of LoggingService

	* org/cougaar/core/service/LoggingService.java
	Simplify slightly.

2002-05-29  Michael Thome  <mthome@bbn.com>

	* org/cougaar/core/blackboard/Subscriber.java, org/cougaar/core/blackboard/BlackboardServiceProvider.java
	Subscriber no longer implements BlackboardService.  Instead, the
	BlackboardServiceProvider returns a private class extending
	Subscriber which actually does.  This fixes bug 1136.

	* org/cougaar/core/blackboard/Subscriber.java
	Check for open transactions earlier in call chain, e.g. in
	publish* rather than in client*Object. bug 826.

	* org/cougaar/core/node/INIParser.java, org/cougaar/core/node/DBInitializerServiceProvider.java
	If no component arguments, leave ComponentDescription parameter
	null - bug 1372.

2002-05-28  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/relay/RelayLP.java:
	Check getSource() for null before proceeding with Relay.Target
	processing. This handles the case of an all-in-one-class Relay
	implementation being erroneously handled as a Target at the Source
	end. The opposite case of mishandling as a Source at the Target
	end is already dealt with.

	* org/cougaar/core/relay/Relay.java:
	Augment javadoce with cautions about aliasing possibilities when
	sending Relays between agents in the same node.

2002-05-22  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/service/SchedulerService.java:
	Add a little bit of javadoc for parameters.

	* org/cougaar/core/relay/RelayLP.java:
	Fix bug handling null change report collection. Ya gotta create a
	new collection before you can add to it.

	* org/cougaar/core/blackboard/Distributor.java: